# dont-trust

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/attestation/: attestation.controller.ts  attestation.service.ts
apps/api/src/attestation/domain/: attestation.repository.ts
apps/api/src/attestation/dto/: create-attestation.dto.ts
apps/api/src/attestation/infrastructure/: in-memory-attestation.repository.ts
apps/api/src/chain/: chain.service.ts
apps/api/src/verification/: verification.controller.ts  verification.service.ts
apps/api/src/verification/domain/: verification.repository.ts
apps/api/src/verification/dto/: create-verification.dto.ts
apps/api/src/verification/infrastructure/: in-memory-verification.repository.ts
apps/attestor/: package.json  reserves.example.json
apps/attestor/src/: attestor.ts  circomlibjs.d.ts  cli.ts  index.ts
apps/attestor/test/: attest-prove-verify.test.mjs
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: Dashboard.tsx  ProverConsole.tsx  SiteHeader.tsx
apps/web/app/request/: page.tsx
apps/web/app/requests/: page.tsx
apps/web/app/requests/[id]/: page.tsx
apps/web/src/lib/: chain.ts  data.ts  format.ts  icons.tsx  live.ts  mock.ts  requests.ts
docs/: TASK.md
scripts/: deploy.sh  e2e.sh
scripts/lib/: encode-submit.mjs  mkwitness.mjs
