# Cargo workspace for the Soroban (Rust) contracts.
# The Node side is managed separately via npm workspaces (see package.json).
[workspace]
resolver = "2"
members = [
    "packages/contracts/verifier",
    "packages/contracts/token",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
