# Cargo workspace for the Soroban (Rust) contracts.
# The Node side is managed separately via npm workspaces (see package.json).
[workspace]
resolver = "2"
members = [
    "packages/contracts/verifier",
    "packages/contracts/token",
]

[workspace.dependencies]
# 25.x = Protocol 25 (X-Ray), which introduces the BN254 host functions
# (bn254_g1_add / bn254_g1_mul / pairing_check) the verifier relies on.
soroban-sdk = "25.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
